Header css: Fix nowrap of subtitle which was breaking mobile layout.

--- a/www/css/threadhack.css
+++ b/www/css/threadhack.css
@@ -264,7 +264,6 @@ article header h1, article h1{
 header .typewriter{
 	font-size:.8em;
 	word-spacing:-.1em;
-	white-space:nowrap;
 }
 header .typewriter:before{
 	content:"\00a0";
